# TheRock

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RELEASES.md  ROADMAP.md  docker-script.sh  requirements-test-base.txt  requirements-test-pytest.txt  version.json
.github/actions/artifact_upload/: action.yml
.github/actions/network_diagnostics/: action.yml
.github/actions/setup_test_environment/: action.yml
.github/workflows/: build_jax_dockerfile.yml  build_linux_jax_wheels.yml  build_linux_packages.yml  build_native_linux_packages.yml  build_portable_linux_artifacts.yml  build_portable_linux_python_packages.yml  build_portable_linux_pytorch_wheels.yml  build_windows_artifacts.yml  build_windows_packages.yml  build_windows_python_packages.yml  build_windows_pytorch_wheels.yml  ci.yml  ci_linux.yml  ci_nightly.yml  ci_weekly.yml  ci_windows.yml  copy_release.yml  pre-commit.yml  publish_build_manylinux_rccl_x86_64.yml  publish_dockerfile.yml  release_native_linux_packages.yml  release_portable_linux_packages.yml  release_portable_linux_pytorch_wheels.yml  release_windows_packages.yml  release_windows_pytorch_wheels.yml  setup.yml  test_artifacts.yml  test_component.yml  test_jax_dockerfile.yml  test_network_diag.yml  test_packages.yml  test_pytorch_wheels.yml  test_sanity_check.yml  test_setup_test_environment.yml
base/: CMakeLists.txt  artifact.toml
base/aux-overlay/: CMakeLists.txt
build_tools/: CMakeLists.txt  bootstrap_build.py  build_python_packages.py  buildctl.py  bump_submodules.py  compute_rocm_package_version.py  fetch_artifacts.py  fetch_sources.py  fileset_tool.py  generate_therock_manifest.py  health_status.py  index_generation_s3_tar.py  install_rocm_from_artifacts.py  linux_portable_build.py  patch_third_party_source.py  setup_ccache.py  setup_venv.py  teatime.py
build_tools/_therock_utils/: artifact_builder.py  artifacts.py  pattern_match.py
build_tools/detail/: linux_portable_build_in_container.sh
build_tools/github_actions/: amdgpu_family_matrix.py  build_configure.py  cleanup_processes.ps1  configure_ci.py  configure_target_run.py  determine_version.py  fetch_job_status.py  fetch_package_targets.py  fetch_test_configurations.py  github_actions_utils.py  post_build_upload.py  promote_wheels_based_on_policy.py  python_to_cp_version.py  upload_build_artifacts.py  upload_test_report_script.py  write_torch_versions.py
build_tools/github_actions/test_executable_scripts/: test_hipblas.py  test_hipblaslt.py  test_hipcub.py  test_hipdnn.py  test_hipfft.py  test_hipsolver.py  test_hipsparse.py  test_miopen.py  test_rocblas.py  test_rocfft.py  test_rocprim.py  test_rocrand.py  test_rocsolver.py  test_rocsparse.py  test_rocthrust.py
build_tools/github_actions/tests/: configure_ci_test.py  configure_target_run_test.py  fetch_package_targets_test.py  github_actions_utils_test.py
build_tools/hack/: check_path_lengths.py  diagnose.py  get_prs_by_files_changed.py
build_tools/hack/env_check/: AMDGPU_LLVM_TARGET.py  check_therock.py  check_tools.py  device.py  find_tools.py  utils.py
build_tools/packaging/linux/: README.txt  build_package.py  package.json  packaging_utils.py  requirements.txt  runpath_to_rpath.py  upload_package_repo.py
build_tools/packaging/python/: generate_release_index.py
build_tools/tests/: artifacts_test.py  compute_rocm_package_version_test.py  fetch_artifacts_test.py  fileset_tool_test.py  setup_venv_test.py
cmake/: therock_amdgpu_targets.cmake  therock_artifacts.cmake  therock_detect_python_versions.cmake  therock_external_source.cmake  therock_global_post_subproject.cmake  therock_globals.cmake  therock_job_pools.cmake  therock_sanitizers.cmake  therock_subproject.cmake  therock_subproject_dep_provider.cmake
comm-libs/: CMakeLists.txt  artifact-rccl.toml
compiler/: CMakeLists.txt  artifact-amd-llvm.toml  pre_hook_amd-comgr.cmake  pre_hook_amd-llvm.cmake
compiler/amd-comgr-stub/: CMakeLists.txt  README.md  config.cmake.in
compiler/amd-comgr-stub/src/: loader.cc  stub_test.c
core/: CMakeLists.txt  artifact-core-ocl.toml
core/hipInfo/: CMakeLists.txt
dockerfiles/: build_manylinux_rccl_x86_64.Dockerfile  build_manylinux_x86_64.Dockerfile  install_openmpi.sh  install_vcpkg.sh  no_rocm_image_ubuntu24_04.Dockerfile
docs/: environment_setup_guide.md
docs/design/: manylinux_builds.md
docs/development/: README.md  adding_tests.md  artifacts.md  build_containers.md  dependencies.md  development_guide.md  github_actions_debugging.md  installing_artifacts.md  reproducing_test_environment.md  sanitizers.md  test_debugging.md  test_environment_reproduction.md  windows_support.md
docs/packaging/: native_packaging.md  python_packaging.md
docs/rfcs/: README.md  RFC0003-Build-Tree-Normalization.md  RFC0004-Fusilli-IREE-Kernel-Provider-hipDNN.md  RFC0005-hipDNN-Project-Integration.md
examples/: CMakeLists.txt  clean_configure_test_project.cmake
examples/cpp-sdk-user/: CMakeLists.txt
external-builds/pytorch/: README.md  build_prod_wheels.py  pytorch_audio_repo.py  pytorch_torch_repo.py  pytorch_triton_repo.py  pytorch_vision_repo.py  repo_management.py
math-libs/: CMakeLists.txt  artifact-fft.toml  artifact-prim.toml  artifact-rand.toml
math-libs/BLAS/: CMakeLists.txt  artifact-blas.toml  pre_hook_hipSPARSE.cmake  pre_hook_rocSPARSE.cmake
ml-libs/: CMakeLists.txt  artifact-hipdnn.toml
patches/amd-mainline/amdsmi/: 0001-Changed-amd_smi_drm.cc-to-depend-on-dynamic-libdrm.patch  0001-Fix-finding-libamd_smi.so.patch  0002-Create-symbolic-links-instead-of-hard-links.patch  0002-Fix-finding-librocm-core.so.patch
patches/amd-mainline/llvm-project/: 0001-Enable-MSVC-support-in-comgr.patch  0001-Ensure-to-use-libamdhip64-with-major-version.patch  0002-hipcc-fix-default-include-path-on-Windows-and-adapt-.patch  0003-HACK-Handle-ROCM-installation-layout-of-lib-llvm-bin.patch  0004-Disable-hipcc-passing-hip-device-libs.patch  (+8 more)
profiler/: CMakeLists.txt  artifact-rocprofiler-sdk.toml
tests/: hipcc_check.cpp  test_rocm_sanity.py
(+56 files in other folders)
